--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -34,7 +34,8 @@ a:active {
 
 h1,
 h2,
-h4 {
+h4,
+h5 {
     font-family: 'PT Sans Narrow', 'Arial', 'sans-serif';
     text-transform: uppercase;
     font-weight: 700;
@@ -165,14 +166,13 @@ Home View Styles
 
 .services h2,
 .services h4 {
+    padding: 10px;
     color: #000;
     /*margin: 20px 0 20px;*/
 }
 
-.services p {
-    color: #4c4c4c;
-    font-size: 14px;
-    padding-bottom: 40px;
+.services h5 {
+    padding: 20px 0 30px;
 }
 
 .services i {
@@ -219,7 +219,7 @@ Home View Styles
 .team img {
     height: 150px;
     width: 150px;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 
 .team i {   
