--- a/client/views/home.html
+++ b/client/views/home.html
@@ -5,11 +5,11 @@
         <div class="row">
             <div class="col-md-6 wow fadeInLeft">
                 <h1>{{ slogan }}</h1>
-                <p>{{companyDescription}}</p>
+                <h3>{{ description }}</h3>
                 <button class="btn btn-lg btn-success"><a class="menu-item" href="/register">Sign Up</a></button>
             </div>
-            <div class="col-md-6 wow fadeInRight img-rounded">
-                <img src="./images/homeSlideIn.jpg" alt="This should be a cool picture">
+            <div class="col-md-6 wow fadeInRight">
+                <img src="./images/homeSlideIn.jpg" alt="This should be a cool picture" class="img-rounded">
             </div>
         </div>
     </div>
@@ -23,8 +23,8 @@
 <div id="services" class="services">
     <div class="container">
         <!--Intro Services-->
-        <h2 class="wow fadeInUp">What is it that we do?</h2>
-        <p class="wow fadeInUp" data-wow-delay="0.4">{{whatWeDo}} </p>
+        <h2 class="wow fadeInUp">How does all this work?</h2>
+        <h5 class="wow fadeInUp" data-wow-delay="0.4">{{whatWeDo}} </h5>
         <!--The actual services-->
         <div class="row">
             <div class="col-md-3 wow fadeInLeft" data-wow-delay=".4s">
@@ -63,28 +63,28 @@
             <h2 class="wow fadeInUp">Meet the team...</h2>
             <p class="wow fadeInUp" data-wow-delay="0.4">The team that linked up so that they can help others link up.</p>
             <div class="col-md-4 wow fadeInLeft" data-wow-delay="0.6s">
-                <img src="images/team-1.jpg" class="img-circle" alt="">
-                <h4>{{personeOneName}}</h4>
+                <img src="../images/teamImg/ClayTerry.png" class="img-circle" alt="">
+                <h4>{{personOneName}}</h4>
                 <b> {{personOneTitle}} </b>
                 <p> {{personeOneAbout}} </p>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/lclaytont" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/leonard-c-terry-7a7342147/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-4  wow fadeInLeft" data-wow-delay="1.2s">
-                <img src="images/team-1.jpg" class="img-circle" alt="">
+                <img src="../images/teamImg/warren.jpg" class="img-circle" alt="">
                 <h4> {{personTwoName}} </h4>
                 <b> {{personTwoTitle}} </b>
                 <p> {{personeTwoAbout}} </p>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="https://github.com/warrencook6" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/warrenfcook/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-4  wow fadeInLeft" data-wow-delay="1.8s">
-                <img src="images/team-1.jpg" class="img-circle" alt="">
+                <img src="../images/teamImg/andrew.jpg" class="img-circle" alt="">
                 <h4>{{personThreeName}}</h4>
                 <b>{{personThreeTitle}}</b>
                 <p>{{personThreeAbout}}</p>
-                <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/mark-scofield-64b83b148/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
