--- a/client/views/mainNav.html
+++ b/client/views/mainNav.html
@@ -11,7 +11,8 @@
         </div>
         <div class="navbar-collapse collapse navbar-right" id="thing-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <!--IF YOU ARE NOT A USER THEN THIS WILL BE SHOW!-->
+                <li class="dropdown" ng-if="!user">
                     <!--click sign in - drops once-->
                     <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Sign In<span class="caret"></span>
@@ -41,26 +42,33 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="/register">Sign Up</a></li>
-                <li><a href="/events">All Events</a></li>
+                <!--IF NOT A USER, THIS WILL NOT BE SHOWN!-->
+                <li><a href="/register" ng-if="!user">Sign Up</a></li>
+                <li><a href="/events">View All Events</a></li>
                 <li><a href="#">About Us</a></li>
-                <li class="dropdown">
-                    <!--click sign in - drops once-->
+                <!--This Profile DropDown Should Not Be Shown Unless Logged In as org or vol-->
+                <li class="dropdown" ng-if="user">
+                    <!--click on profile - drops down-->
                     <a href="#" class="dropdown-toggle menu-item" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         My Profile<span class="caret"></span>
                     </a>
-                    <!--shows dropdown-->
+                    <!--the dropdown-->
                     <ul class="dropdown-menu">
                         <li><a href="/">View Profile</a></li>
-                        <li><a href="/edit_organization_profile">Edit Profile</a></li>
-                        <li><a href="/" ng-show="$scope.Volunteer"> Logout </a></li> 
-                        <li><a href="/" ng-show="!$scope.Volunteer"> Login</a></li>
+                        <li><a href="/edit_volunteer_profile/{{v.volunteerid}}" ng-show="user.role == 'Volunteer'">Edit Vol Profile</a></li>
+                        <li><a href="/edit_organization_profile/{{o.organizationid}}" ng-show="user.role == 'Organization'">Edit Org Profile</a></li>
+                        <li><a href="/" ng-if="user"> Logout </a></li> 
+                        
+
+
                         <!--<li><a href="/" ng-click="logout()">Log Out</a></li>-->
                 </ul>
                 </li>
-                <!--<li><a href="/register">My Profile</a></li>
-                <li><a href="/" ng-click="logout()">Log Out</a></li>-->
             </ul>
+
+             <!--when no one logged in have default nav, with sign in/ Up
+                        when anyone logged in takes those away, and show logout
+                            depending on the role, edit profile link will be different-->
         </div>
     </div>
 </div>
